# drivers-camera_interface

./: CMakeLists.txt  CMakeLists.txt~  Doxyfile.in  manifest.xml
cmake/: GenerateDoxygenDoc.cmake
configuration/: camera_interface.pc.in
doc/: Doxyfile
src/: AutoWhiteBalance.h  BrightnessIndicator.cpp  BrightnessIndicator.h  CMakeLists.txt  CMakeLists.txt~  CamInfoUtils.h  CamInterface.cpp  CamInterface.h  CamInterface.h~  CamTypes.h  CameraFrame.h  CameraFrame.h~  ExposureController.cpp  ExposureController.h  camera_interface.pc.in  frame.h
test/: main.cpp
